# fw_bootloader

update_tools/android-usb_hid/UbootUpdate_20221219/: settings.gradle
update_tools/android-usb_hid/UbootUpdate_20221219/app/: build.gradle
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/androidTest/java/com/jieli/bootloader/: ExampleInstrumentedTest.java
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/: AndroidManifest.xml
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/cpp/: CMakeLists.txt  debug.h  jl_bootloader.cpp  jl_bootloader.h  jl_bootloader_jni.cpp  jl_bootloader_jni.h
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/java/com/jieli/bootloader/: MainActivity.java  MainApplication.java
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/java/com/jieli/bootloader/cb/: Callback.java
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/java/com/jieli/bootloader/hid/: HidClient.java  IUsbClient.java
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/res/layout/: activity_main.xml
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/res/menu/: menu_main.xml
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/res/values/: strings.xml  themes.xml
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/main/res/values-night/: themes.xml
update_tools/android-usb_hid/UbootUpdate_20221219/app/src/test/java/com/jieli/bootloader/: ExampleUnitTest.java
update_tools/android-usb_hid/UbootUpdate_20221219/gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
